test/error/StSwitchCaseDefault.ci
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case 42:
			return true;
		case 5: //ERROR: Please remove case before default
		default:
			return false;
		}
	}
}
